<resources>
    <string name="app_name">FoodyFresh</string>
    <string name="salads">Salads</string>
    <string name="appetizers">Appetizers</string>
    <string name="soups">Soups</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="desserts">Desserts</string>
    <string name="others">Others</string>
    <string name="new_item">Add new one</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>